Blurred background and corrected replay button

--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
+body {
+  height: 100vh;
+  padding: 0%;
+  margin: 0%;
+}
+
 td {
-  border:  2px solid #333;
-  height:  100px;
-  width:  100px;
-  text-align:  center;
-  vertical-align:  middle;
-  font-family:  "Comic Sans MS", cursive, sans-serif;
-  font-size:  70px;
+  border: 5px solid #333;
+  height: 100px;
+  width: 100px;
+  text-align: center;
+  vertical-align: middle;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 70px;
   cursor: pointer;
 }
 
 table {
   border-collapse: collapse;
-  position:   absolute;
+  position: absolute;
   left: 50%;
   margin-left: -155px;
   top: 50px;
@@ -28,13 +34,14 @@ table tr:last-child td {
 table tr td:first-child {
   border-left: 0;
 }
+
 table tr td:last-child {
   border-right: 0;
 }
 
 .endgame {
   display: none;
-  width:  200px;
+  width: 200px;
   top: 120px;
   background-color: rgba(205, 133, 63, 0.8);
   position: absolute;
@@ -45,10 +52,10 @@ table tr td:last-child {
   text-align: center;
   border-radius: 5px;
   color: white;
-  font-size: 2em; 
+  font-size: 2em;
 }
 
-.selectSym{
+.selectSym {
   display: none;
   width: 220px;
   top: 110px;
@@ -61,23 +68,34 @@ table tr td:last-child {
   text-align: center;
   border-radius: 5px;
   color: yellow;
-  font-size: 2em; 
+  font-size: 2em;
 }
 
-.selectSym button{
+.selectSym button {
   font-family: "Comic Sans MS", cursive, sans-serif;
-  font-size:  50px;
+  font-size: 50px;
   width: 70px;
 }
 
-.selectSym  button:first-of-type {
+.selectSym button:first-of-type {
   margin-right: 10px;
 }
-.selectSym  button:last-of-type {
+
+.selectSym button:last-of-type {
   margin-left: 10px;
 }
 
-body
-{
-  background-image: linear-gradient(135deg, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.3) 50%), url('https://thumbs.dreamstime.com/z/tic-tac-toe-pattern-blue-background-chaotic-sample-74834641.jpg');
+.replay {
+  margin: 30px 0;
+  /* padding: 20px; */
+  width: auto;
+  height: auto;
+  font-size: x-large;
+  /* position: relative; */
+}
+
+.container {
+  background-image: url('https://thumbs.dreamstime.com/z/tic-tac-toe-pattern-blue-background-chaotic-sample-74834641.jpg');
+  filter: blur(1.5px);
+  height: 100%;
 }
